forgot List.of wasnt in java 8, so going back to Arrays.asList